# fundus_diabetes_retinopathy

./: .gitignore  README.md  convert_to_onnx.py  efficient-net-b6.ipynb  updated_notebook
fundus_inference_cpp/: CMakeLists.txt
fundus_inference_cpp/apps/: main.cpp
fundus_inference_cpp/include/: dr_grader.hpp
fundus_inference_cpp/src/: dr_grader.cpp
